--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,8 @@
+{% extends "base.html" %}
+
+{% block title %}Home - SuperCoolApp{% endblock %}
+
+{% block content %}
 <h1>HELLO WORLDS!</h1>
+<p>Welcome to your Flask application!</p>
+{% endblock %}
