--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %}Home - SuperCoolApp{% endblock %}
+{% block title %}Footprints{% endblock %}
 
 {% block content %}
-<h1>HELLO WORLDS!</h1>
+<h1>Footprints</h1>
 <p>Welcome to your Flask application!</p>
 {% endblock %}
