updated app.py and updated index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,18 @@
 {% block title %}Footprints{% endblock %}
 
 {% block content %}
-<h1>Footprints</h1>
-<p>Welcome to your Flask application!</p>
+<body>
+    
+    <div class="container mt-4">
+    
+      <header class="text-center mb-5">
+        <h1 class="display-4 fw-bold">Footprints Homepage</h1>
+        <p class="lead text-muted">
+          Welcome to Footprints! Here you will be able to track your hiking activities, and be updated on your fellow hikers' journeys!
+        </p>
+      </header>
+    
+    </div>
+
+</body>
 {% endblock %}
