updated all trails

--- a/templates/all_trails.html
+++ b/templates/all_trails.html
@@ -17,7 +17,7 @@
 
   {% set _trails = trails if trails is defined and trails else [
     {'_id': '1', 'name': 'Bear Peak', 'difficulty': 'Hard', 'location': 'CO', 'duration': '1 mile'},
-    {'_id': '2', 'name': 'Breakneck Ridge', 'difficulty': 'Hard', 'location': 'NY' 'duration': '2 miles'}
+    {'_id': '2', 'name': 'Breakneck Ridge', 'difficulty': 'Hard', 'location': 'NY', 'duration': '2 miles'}
   ] %}
 
   <section aria-label="All trails">
