--- a/templates/add_trail.html
+++ b/templates/add_trail.html
@@ -122,6 +122,7 @@
             </div>
 
             <div class="form-actions">
+                <button type="button" class="btn btn-secondary" onclick="window.location.href='/'">Back</button>
                 <button type="button" class="btn btn-secondary" onclick="resetForm()">Reset Form</button>
                 <button type="submit" class="btn btn-primary">
                     <span class="btn-text">Submit Trail</span>
